--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: GUNANK SOOD
-description: Feel free to bookmark if you find it useful!
+description: Programmer , Developer , Learner !
